--- a/_quarto.yml
+++ b/_quarto.yml
@@ -4,13 +4,14 @@ project:
 
 book:
   title: &book_title "The Little Book of C"
-  subtitle: &book_subtitle "Version 0.3.2"
+  subtitle: &book_subtitle "Version 0.4.0"
   author: &book_author "Duc-Tam Nguyen"
-  date: &book_date "2025-10-05"
+  date: &book_date "2025-10-16"
   output-file: book
   chapters:
     - index.qmd
-    - books/en-US/book.md
+    # - books/en-us/cheatsheet.md
+    - books/en-us/book.md
 
 website:
   title: *book_title
